# convergio-inference

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-inference/: Cargo.toml
crates/convergio-inference/src/: backend.rs  backend_mlx.rs  budget.rs  classifier.rs  ext.rs  lib.rs  mcp_defs.rs  metrics.rs  model_config.rs  router.rs  router_tests.rs  routes.rs  schema.rs  types.rs
crates/convergio-inference/tests/: e2e_inference_api.rs  e2e_routing_budget.rs  security_model_hijacking.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  042-opus-sonnet-model-routing.md  ADR-013-inference-multi-tier-routing.md  ADR-021-mlx-inference-setup.md
